--- a/Pipfile
+++ b/Pipfile
@@ -22,4 +22,5 @@ python_version = "3"
 yamllint = "yamllint --strict --format colored ."
 ansiblelint = "ansible-lint ."
 test = "molecule test --destroy always --parallel"
+ansibletest = "ansible-playbook -vv --diff test.yml"
 consul = "consul agent -dev -config-file ./molecule/default/consul/server.json"
