--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,8 @@ verify_ssl = true
 [dev-packages]
 molecule = {extras = ["lint"], version = ">=3.0.8"}
 docker = ">=4.3.1"
+bandit = "*"
+flake8 = "*"
 
 [packages]
 ansible = ">=2.9"
