--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,7 +14,7 @@
     mgmt_token: "{{ consul_master_token | mandatory() }}"
     name: "{{ item.client }}"
     token: "{{ item.token }}"
-    rules: "{{ item.rules | list() }}"
+    rules: "{{ item.rules }}"
   loop: "{{ consul_client_token }}"
   when:
     - consul_client_token is sequence()
@@ -26,7 +26,8 @@
     scheme: "{{ consul_server.scheme }}"
     port: "{{ consul_server.port | default(8500) }}"
     mgmt_token: "{{ consul_master_token | mandatory() }}"
-    token: "{{ item }}"
+    name: "{{ item.client }}"
+    token: "{{ item.token }}"
     state: absent
   loop: "{{ consul_remove_token }}"
   when:
